--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <ul>
           <li><a href="#about">About</a></li>
           <li><a href="#work">Work</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="contact.html">Contact</a></li>
          </ul>
         </nav>
        </div>
@@ -84,12 +84,14 @@
                        </div>
              </section>
 
-          <footer id="contact">
+          <footer>
+            <section id="contact">
               <div class="full-width">
                 <div class="half-width">
-                    <h2>If you have a new project and think you need my help, then get in touch.</h2>
-                          <h3 id="email-header">Contact me!</h3>
-                          <h3 id="name">Orsi Klement</h3>
+                  <div class="email-header">
+                          <h3 >Contact me!</h3>
+                        </div>
+                          <h2 id="name">Orsi Klement</h2>
                               <a href="mailto:hi@osriklement.com">hello @ orsiklement.com</a>
                 </div>
                    <div class="half-width">
@@ -101,6 +103,7 @@
                               </ul>
                       </div>
                     </div>
+                  </section>
               </footer>
             </main>
           </body>
